--- a/blog_sliders.html
+++ b/blog_sliders.html
@@ -375,7 +375,7 @@
 									</a>
 									<ul class="pos-abs pos-left-top list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abdul Wasith">By: Abdul Wasith</a>
+											<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abdul Wasith">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs anim-text-fill tr-delay-05 js-pointer-small" data-text="In: Art">In: Art</a>
@@ -403,7 +403,7 @@
 									</a>
 									<ul class="pos-abs pos-left-top list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abdul Wasith">By: Abdul Wasith</a>
+											<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abdul Wasith">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs anim-text-fill tr-delay-05 js-pointer-small" data-text="In: Art">In: Art</a>
@@ -431,7 +431,7 @@
 									</a>
 									<ul class="pos-abs pos-left-top list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abdul Wasith">By: Abdul Wasith</a>
+											<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abdul Wasith">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs anim-text-fill tr-delay-05 js-pointer-small" data-text="In: Art">In: Art</a>
@@ -540,7 +540,7 @@
 								<div class="column-r-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abhijith Pramod</a>
+											<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abhijith Pramod</a>
 										</li>
 
 										<li class="list__item">
@@ -618,7 +618,7 @@
 								<div class="column-r-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
 
 										<li class="list__item">
@@ -663,7 +663,7 @@
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">In: Art</a>
@@ -695,7 +695,7 @@
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">In: Art</a>
