--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<div class="header-contact js-midnight-color js-headroom">
 				<div class="header-contact__flex">
 					<div class="header-contact__anim">
-						<a href="contact.html" class="header-contact__btn vertical-text center js-pointer-large">
+						<a href="contact" class="header-contact__btn vertical-text center js-pointer-large">
 							<span class="vertical-text__inner"><i class="far fa-comment-dots"></i> Get in touch</span>
 						</a>
 					</div>
