--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<!-- logo start -->
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
-					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
+					<a href="index" class="header-logo__box js-pointer-large js-animsition-link">
 						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
 						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
 					</a>
@@ -185,25 +185,25 @@
 		<nav class="landing-nav js-midnight-color">
 			<ul class="landing-nav__flex">
 				<li class="landing-nav__btn">
-					<a href="index.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+					<a href="index" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+					<a href="about-us" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+					<a href="services" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
@@ -223,42 +223,42 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="index" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Home">Home</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="about-us.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="about-us" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="services" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="client" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Client">Client</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -349,7 +349,7 @@
 									</span>
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
-									<a href="contact.html" class="border-btn js-pointer-large">
+									<a href="contact" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Let's Work Together</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
@@ -381,7 +381,7 @@
 									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
-									<a href="services.html" class="border-btn js-pointer-large">
+									<a href="services" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Know More</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
@@ -413,7 +413,7 @@
 									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
-									<a href="services.html" class="border-btn js-pointer-large">
+									<a href="services" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Know More</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
@@ -681,7 +681,7 @@
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
-							<a href="contact.html" class="clients-lines__column js-pointer-large">
+							<a href="contact" class="clients-lines__column js-pointer-large">
 								<div class="clients-lines__inner hover-box pos-rel js-scrollanim">
 									<div class="padding-left-right-20 subhead-xxs text-center pos-abs pos-center-center">
 										<span class="anim-text-double-fill" data-text="This spot">This spot</span><br>
@@ -831,7 +831,7 @@
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="Three-Essential-Digital-Marketing-Channels-In-2020" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Post">
@@ -843,23 +843,23 @@
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">In: Art</a>
 										</li> -->
 										<li class="list__item">
-											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">10 February 2021</a>
+											<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">10 February 2021</a>
 										</li>
 									</ul>
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xs text-color-black">You Have a chance to<br>
 										Refine Your Marketing Approach</h3>
 										<p class="body-text-s margin-top-20 text-color-black">
 											2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point ...
 										</p>
 									</a>
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Continue reading</span>
 											<span class="skew-btn__arrow black"></span>
@@ -884,14 +884,14 @@
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">2020, March 15</a>
 										</li>
 									</ul>
-									<a href="post_good-morning.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="post_good-morning" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xxxs text-color-black">
 											Good morning!<br>
 											Have a nice day
 										</h3>
 										<p class="body-text-xs margin-top-20 text-color-black">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
 									</a>
-									<a href="post_good-morning.html" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="post_good-morning" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Continue reading</span>
 											<span class="skew-btn__arrow black"></span>
@@ -900,7 +900,7 @@
 								</div>
 							</div>
 							<div class="six-columns padding-top-30">
-								<a href="post_good-morning.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="post_good-morning" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/good-morning/round-white-ceramic-saucer-and-coffee-cup-2638019.jpg" alt="Post">
@@ -913,7 +913,7 @@
 						<!-- blog-entry start -->
 						<!-- <article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="post_dont-panic" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/home-studio/pexels-3388901.jpg" alt="Post">
@@ -934,14 +934,14 @@
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">2020, April 7</a>
 										</li>
 									</ul>
-									<a href="post_dont-panic.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+									<a href="post_dont-panic" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
 										<h3 class="headline-xxxs text-color-black">
 											Home recording studio<br>
 											interior design
 										</h3>
 										<p class="body-text-xs margin-top-20 text-color-black">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
 									</a>
-									<a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="post_dont-panic" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Continue reading</span>
 											<span class="skew-btn__arrow black"></span>
@@ -985,25 +985,25 @@
 						<div class="four-columns footer-nav-mobile-padding">
 							<ul class="column-l-r-margin-10 footer-nav-list js-footer-hover-box">
 								<li>
-									<a href="index.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
+									<a href="index" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
 								</li>
 								<li>
-									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+									<a href="about-us" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
-									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
-									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
+									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
 								</li>
 							</ul>
 						</div><!-- column end -->
