--- a/top-choices-in-web-hosting.html
+++ b/top-choices-in-web-hosting.html
@@ -114,7 +114,7 @@
 			<!-- logo start -->
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
-					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
+					<a href="index" class="header-logo__box js-pointer-large js-animsition-link">
 						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
 						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
 					</a>
@@ -133,7 +133,7 @@
 			<div class="header-contact js-midnight-color js-headroom">
 				<div class="header-contact__flex">
 					<div class="header-contact__anim">
-						<a href="contact.html" class="header-contact__btn vertical-text center js-pointer-large">
+						<a href="contact" class="header-contact__btn vertical-text center js-pointer-large">
 							<span class="vertical-text__inner"><i class="far fa-comment-dots"></i> Get in touch</span>
 						</a>
 					</div>
@@ -179,25 +179,25 @@
 		<nav class="landing-nav js-midnight-color">
 			<ul class="landing-nav__flex">
 				<li class="landing-nav__btn">
-					<a href="index.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+					<a href="index" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+					<a href="about-us" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+					<a href="services" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
@@ -217,42 +217,42 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="index" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Home">Home</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="about-us.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="about-us" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="services" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="client" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Client">Client</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -422,7 +422,7 @@
 
 										</p>
 									</a>
-									<!-- <a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<!-- <a href="post_dont-panic" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -455,7 +455,7 @@
 											Some of us out there are a little bit budget conscious, So the next top choice is Hostinger .Hostinger is one of the most affordable web host out there. Their lowest plans start at less than a dollar. So, for just cheapest rate you can go up and start using Hostinger and all of these rates they have are promotional So they will go up at renewal but you are able to get it for low cost if you do a longer subscription. Might sound risky but it's really a great value. Even after the promotional pricing it's still super low, the single web hosting plan comes at one of the lowest prices in the industry and the best part is that hostinger doesn’t feel like a cheap hosting. For the marketing to the user interface for managing the site, you feel like you are dealing with something that is a little more high-end. The Uptime, the site speed, the support are all good and they have a 99.9% Uptime guarantee along with 24/7 support whenever you need help. So, don’t expect them to be quite as good as the other host but at such a value its unbeatable.
 										</p>
 										</a>
-									<!-- <a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<!-- <a href="post_dont-panic" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -464,7 +464,7 @@
 								</div>
 							</div>
 							<div class="six-columns padding-top-30">
-								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="post_dont-panic" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/hosting/hostinger.jpg" alt="Post">
@@ -538,7 +538,7 @@
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-01">
-										<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/top-choices-in-web-hosting.html" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
+										<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/top-choices-in-web-hosting" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</div>
@@ -552,7 +552,7 @@
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-04">
-										<a href="whatsapp://send?text=https://thedaxads.com/top-choices-in-web-hosting.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
+										<a href="whatsapp://send?text=https://thedaxads.com/top-choices-in-web-hosting" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-whatsapp"></i>
 										</a>
 									</div>
@@ -572,7 +572,7 @@
 					<div class="padding-top-bottom-120 container small text-center">
 						<div class="js-scrollanim">
 							<!-- button start -->
-							<a href="the-future-is-multi-shaped.html" class="skew-btn js-pointer-large js-animsition-link anim-fade">
+							<a href="the-future-is-multi-shaped" class="skew-btn js-pointer-large js-animsition-link anim-fade">
 								<span class="skew-btn__box">
 									<span class="skew-btn__content">Next Article</span>
 									<span class="skew-btn__arrow"></span>
@@ -581,7 +581,7 @@
 
 							<!-- title start -->
 							<div class="padding-top-30 text-center">
-								<a href="the-future-is-multi-shaped.html" class="js-pointer-large js-animsition-link">
+								<a href="the-future-is-multi-shaped" class="js-pointer-large js-animsition-link">
 									<h2 class="headline-xl anim-fade tr-delay-02">The Future Is Multi-shaped</h2>
 								</a>
 							</div><!-- title end -->
@@ -620,25 +620,25 @@
 						<div class="four-columns footer-nav-mobile-padding">
 							<ul class="column-l-r-margin-10 footer-nav-list js-footer-hover-box">
 								<li>
-									<a href="index.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
+									<a href="index" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
 								</li>
 								<li>
-									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+									<a href="about-us" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
-									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
-									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
+									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
 								</li>
 							</ul>
 						</div><!-- column end -->
