--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -113,7 +113,7 @@
 			<!-- logo start -->
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
-					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
+					<a href="index" class="header-logo__box js-pointer-large js-animsition-link">
 						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
 						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
 					</a>
@@ -132,7 +132,7 @@
 			<div class="header-contact js-midnight-color js-headroom">
 				<div class="header-contact__flex">
 					<div class="header-contact__anim">
-						<a href="contact.html" class="header-contact__btn vertical-text center js-pointer-large">
+						<a href="contact" class="header-contact__btn vertical-text center js-pointer-large">
 							<span class="vertical-text__inner"><i class="far fa-comment-dots"></i> Get in touch</span>
 						</a>
 					</div>
@@ -178,25 +178,25 @@
 		<nav class="landing-nav js-midnight-color">
 			<ul class="landing-nav__flex">
 				<li class="landing-nav__btn">
-					<a href="index.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+					<a href="index" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+					<a href="about-us" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+					<a href="services" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
@@ -216,42 +216,42 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="index" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Home">Home</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="about-us.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="about-us" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="services" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="client" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Client">Client</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -422,7 +422,7 @@
 											If you havent already using email marketing, this is the perfect time for you to start incorporating it into your marketing Plan. If email Marketing is already a part of your strategy, this is a good time to re-evaluate how you're using the Platform and look for more opportunities to incorporate it and drive better results. we're seeing an increase in overall email marketing activity across world in many industries. With so many more people working from home, at least temporarily, email can be even more effective at driving results.
 										</p>
 									</a>
-									<!-- <a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<!-- <a href="post_dont-panic" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -455,7 +455,7 @@
 											<br><br>
 											However, SMM marketing can be challenging, and like email, requires strict compliance with a set of regulations. The channel itself is also more restrictive than most marketing channels,.</p>
 									</a>
-									<!-- <a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<!-- <a href="post_dont-panic" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
@@ -533,21 +533,21 @@
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-01">
-										<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020.html" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
+										<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</div>
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-02">
-										<a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fthedaxads.com%2FThree-Essential-Digital-Marketing-Channels-In-2020.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fthedaxads.com%2FThree-Essential-Digital-Marketing-Channels-In-2020" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-facebook-f"></i>
 										</a>
 									</div>
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-04">
-										<a href="whatsapp://send?text=https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
+										<a href="whatsapp://send?text=https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-whatsapp"></i>
 										</a>
 									</div>
@@ -568,7 +568,7 @@
 					<div class="padding-top-bottom-120 container small text-center">
 						<div class="js-scrollanim">
 							<!-- button start -->
-							<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="skew-btn js-pointer-large js-animsition-link anim-fade">
+							<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="skew-btn js-pointer-large js-animsition-link anim-fade">
 								<span class="skew-btn__box">
 									<span class="skew-btn__content">Next Article</span>
 									<span class="skew-btn__arrow"></span>
@@ -577,7 +577,7 @@
 
 							<!-- title start -->
 							<div class="padding-top-30 text-center">
-								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="js-pointer-large js-animsition-link">
+								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="js-pointer-large js-animsition-link">
 									<h2 class="headline-xl anim-fade tr-delay-02">You Have a chance to Refine Your Marketing Approach</h2>
 								</a>
 							</div><!-- title end -->
@@ -616,25 +616,25 @@
 						<div class="four-columns footer-nav-mobile-padding">
 							<ul class="column-l-r-margin-10 footer-nav-list js-footer-hover-box">
 								<li>
-									<a href="index.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
+									<a href="index" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
 								</li>
 								<li>
-									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+									<a href="about-us" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
-									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
-									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
+									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
 								</li>
 							</ul>
 						</div><!-- column end -->
