--- a/academy.html
+++ b/academy.html
@@ -118,7 +118,7 @@
 			<!-- logo start -->
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
-					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
+					<a href="index" class="header-logo__box js-pointer-large js-animsition-link">
 						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
 						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
 					</a>
@@ -137,7 +137,7 @@
 			<div class="header-contact js-midnight-color js-headroom">
 				<div class="header-contact__flex">
 					<div class="header-contact__anim">
-						<a href="contact.html" class="header-contact__btn vertical-text center js-pointer-large">
+						<a href="contact" class="header-contact__btn vertical-text center js-pointer-large">
 							<span class="vertical-text__inner"><i class="far fa-comment-dots"></i> Get in touch</span>
 						</a>
 					</div>
@@ -183,25 +183,25 @@
 		<nav class="landing-nav js-midnight-color">
 			<ul class="landing-nav__flex">
 				<li class="landing-nav__btn">
-					<a href="index.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+					<a href="index" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+					<a href="about-us" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+					<a href="services" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog_sliders.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog_sliders" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
@@ -221,42 +221,42 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="index" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Home">Home</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="about-us.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="about-us" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="services" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="client" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Client">Client</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog_sliders.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog_sliders" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -479,7 +479,7 @@
 											Choosing a career path is a daunting process. You’re supposed to find something you love while also factoring in things like long-term stability and supporting the overall lifestyle you want. A digital marketing career isn’t necessarily the dream job most people aspire to while they’re in school. But when you consider the opportunities in this dynamic field, you’ll see that the digital marketing career outlook is nothing but positive and will continue to be so in 2021...
 										</p>
 									</div>
-									<a href="digital-marketing.html" class="skew-btn js-pointer-large">
+									<a href="digital-marketing" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -516,7 +516,7 @@
 						</div><!-- column end -->
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<a href="web-development.html" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
+							<a href="web-development" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
 								<img src="assets/images/projects/courses/man-using-laptop-on-table-against-white-background-257897.jpg" alt="course">
 							</a>
 						</div><!-- column end -->
@@ -526,7 +526,7 @@
 					<div class="flex-container flex-align-center padding-top-60">
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<a href="graphic-design.html" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
+							<a href="graphic-design" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
 								<img src="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" alt="course">
 							</a>
 						</div><!-- column end -->
@@ -543,7 +543,7 @@
 										<p class="body-text-s text-color-black margin-top-20">
 										The graphic design plays an important role in today’s modern competitive global environment. The graphics designing has become an integral part of any business and occasion. For a customized website capable of providing all your need, the graphics arrangement on the website should be appropriate as well as look attractive and adorable. The graphic designing is important in almost every field that includes- marketing, magazine layout etc. A good graphic design should effectively communicate the message of the sender to the target audience using tools of visual communication.
 									</div>
-									<a href="graphic-design.html" class="skew-btn js-pointer-large">
+									<a href="graphic-design" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -588,25 +588,25 @@
 						<div class="four-columns footer-nav-mobile-padding">
 							<ul class="column-l-r-margin-10 footer-nav-list js-footer-hover-box">
 								<li>
-									<a href="index.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
+									<a href="index" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
 								</li>
 								<li>
-									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+									<a href="about-us" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
-									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog_sliders.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog_sliders" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
-									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
+									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
 								</li>
 							</ul>
 						</div><!-- column end -->
