--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,7 @@
 					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog_sliders" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
@@ -257,7 +257,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="blog_sliders" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="blog" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -572,7 +572,7 @@
 									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog_sliders" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
 									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
