--- a/about-us.html
+++ b/about-us.html
@@ -199,7 +199,7 @@
 					<a href="client" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="blog_sliders" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
@@ -565,7 +565,7 @@
 									<a href="client" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="blog_sliders" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
 									<a href="contact" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
